updated generated code
