# application/services/custom_services/employees/src/service/employeesentityService.ts
@@ -8,7 +8,16 @@ export class employeesentityService {
     
     constructor() { }
     
-    public  GpGetAllValues(req: Request, callback){
+    public  GpSearch(req: Request, callback){
+    new CustomLogger().showLogger('info', 'Enter into employeesentityService.ts: GpSearch')
+     let  employeesentityData = req.query;
+     employeesentity.GpSearch(employeesentityData,(response)=>{
+             new CustomLogger().showLogger('info', 'Exit from employeesentityService.ts: GpSearch')
+         callback(response);
+         });
+    }
+    
+public  GpGetAllValues(req: Request, callback){
     new CustomLogger().showLogger('info', 'Enter into employeesentityService.ts: GpGetAllValues')
      
      employeesentity.GpGetAllValues((response)=>{
