# application/services/custom_services/employees/src/swagger/swagger.yaml
@@ -13,12 +13,26 @@ info:
       name: Apache 2.0
       url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-   - url: http://localhost:8036
+   - url: http://localhost:8042
      description: employees
 tags:
 - name: employeesentity
   description: Second Entity
 paths:
+   "/employeesentity/get/search":
+      get:
+         tags:
+         -  employeesentity
+         description: GpSearch
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
    "/employeesentity":
       get:
          tags:
